crates/keron-lang/tests/corpus/errors/check/resource_kinds_remain_distinct.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `File`, found `Symlink`
  --> 2:15
  |
2 | val f: File = s
  |               ^
